BB-1004: Price Filter in Grids - fixed _getCriteriaHint() in product-price-filter.js - updated css - wrapped unit separator to <span />

--- a/src/OroB2B/Bundle/PricingBundle/Resources/public/css/style.less
+++ b/src/OroB2B/Bundle/PricingBundle/Resources/public/css/style.less
@@ -91,7 +91,11 @@
     margin-bottom: 0;
   }
 
-  .product-price-unit-filter,
+  .product-price-unit-filter {
+    display: inline;
+    margin-right: 5px;
+  }
+
   .choice-filter{
     display: inline-block;
     width: auto;
